Revision history for {{$dist->name}}

{{$NEXT}}

6.033     2025-05-01 11:45:18-04:00 America/New_York
        - when creating a tarball with GNU tar, use --format=ustar to avoid
          xattrs and other problems sometimes related to macOS (thanks, Graham
          Knop!)

6.032     2024-05-25 12:30:02-04:00 America/New_York
        - UploadToCPAN errors will distinguish between "couldn't find password"
          and "something went wrong trying to get password"
        - UploadToCPAN can now use any Login-type stash for credentials, not
          just a PAUSE-class stash

6.031     2023-11-20 19:49:23-05:00 America/New_York
        - avoid some warnings on platforms without symlinks; (thanks, reneeb!)

6.030     2023-01-18 21:36:40-05:00 America/New_York
        - "dzil new" will use command line options before configuration
        - "dzil add" now falls back to %Mint stash options before defaults
          (for both of the above: thanks, Graham Knop!)

6.029     2022-11-25 17:02:33-05:00 America/New_York
        - update some links to use https instead of http (thanks, Elvin
          Aslanov)
        - turn on strict and warnings in generated author tests (thanks, Mark
          Flickinger)
        - use "v1.2.3" for multi-dot versions in "package NAME VERSION" formats
          (thanks, Branislav Zahradník)
        - fixes to operation on msys (thanks, Paulo Custodio)
        - add "main_module" option to MakeMaker (thanks, Tatsuhiko Miyagawa)
        - fix authordeps behavior; don't add an object to @INC (thanks, Shoichi
          Kaji)

6.028     2022-11-09 10:54:14-05:00 America/New_York
        - remove bogus work-in-progress signatures-using commit from 6.027;
          that was a bad release! thanks for the heads-up about it to Gianni
          "dakkar" Ceccarelli!

6.027     2022-11-06 17:52:20-05:00 America/New_York
        - if DZIL_COLOR is set to 0, override auto-detection

6.025     2022-05-28 11:55:35-04:00 America/New_York