@@ -7,7 +7,7 @@ use autodie;
 
 use Dist::Zilla::Util::AuthorDeps;
 
-my $authordeps = Dist::Zilla::Util::AuthorDeps::extract_author_deps(
+my $authordeps = Dist::Zilla::Util::AuthorDeps::_extract_author_deps(
   'corpus/dist/AuthorDeps',
   0,
 );
@@ -32,7 +32,7 @@ SKIP: {
   skip 'this test requires the local plugins to have a $VERSION assigned', 1
     if not eval { require Dist::Zilla::Plugin::Encoding; Dist::Zilla::Plugin::Encoding->VERSION('5.000'); 1 };
 
-  my $missing_authordeps = Dist::Zilla::Util::AuthorDeps::extract_author_deps(
+  my $missing_authordeps = Dist::Zilla::Util::AuthorDeps::_extract_author_deps(
     'corpus/dist/AuthorDeps',
     1
   );
